--- a/example/App.css
+++ b/example/App.css
@@ -44,6 +44,12 @@ main {
     border-bottom: 1px solid var(--color-border);
 }
 
+.toolbar a {
+    flex-grow: 1;
+    text-align: right;
+    color: var(--color-text)
+}
+
 .diagram {
     cursor: move;
 }
